# poetry-ds-cookiecutter

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .gitignore  Makefile  pyproject.toml
