[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.0.1"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
packages = [{ include = "{{ cookiecutter.package_name }}"} ]

[tool.poetry.dependencies]
python = "3.11.*"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
black = "*"
